feat(migration): Enhance Static Site migration to be fully data-driven #64 - UI:  - New page /admin/migration-settings - Migration Settings tabset + Activity table (sticky header, ▲/▼ sort)  - WebSocket keepalive and auto‑reconnect for resilient live updates  - Parent page mode dropdown:    - As‑is (migrate parent content)    - With Links as Action Buttons Row (button per child; see Engine)  - Specific Albums section for targeted album migration - Engine  - Parent-page link scraping:    - Directory-aware fallback when selectors yield zero anchors    - PROGRESS messages for start/failure/zero-links/found-links   - Apply shared text-exclusions throughout; remove link-wrapped nav lines and excluded images   - Add parent-page limit support (maxChildren) and enforce during scraping   - Skip invalid album URLs; migrate albums only when configured   - Remove UA override; rely on Puppeteer default UA  - Per‑page feedback:    - “Page migrated: path with N text block(s) and M image(s)” (pluraliseWithCount)    - “✅ Migrated {Title} to {path}”  - Inline image handling:    - Convert relative <img> to absolute before Turndown    - Detect inline image markers; merge image into preceding text row (nested and non-nested)  - Idempotent re‑runs via upsert:    - ContentText upsert by name    - PageContent upsert by path  - Albums:    - ContentMetadata upsert by album name    - Album PageContent upsert by path    - Granular PROGRESS lines for found/processing/completed/skipped - Content Management:   - BREAKING CHANGE: PageContent now embeds inline text (contentText) rather than referencing ContentText via contentTextId for newly migrated pages. Existing documents can be inlined using the provided backfill script.   - Persist inline page content in PageContent (columns.contentText) instead of contentTextId   - Upsert PageContent by path to replace existing docs   - Extend Mongo schema to store columns.contentText   - Action buttons: persist description in contentText and keep images wit

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "clean": "rm -rf node_modules && rm -rf server/node_modules",
     "reinstall": "npm run clean && npm install && npm run postbuild",
     "e2e": "ng e2e",
-    "lint": "ng lint",
-    "lintfix": "ng lint --fix",
+    "lint": "tslint -c tslint.json -p projects/ngx-ramblers/tsconfig.app.json && tslint -c tslint.json -p projects/ngx-ramblers/tsconfig.spec.json",
+    "lintfix": "tslint -c tslint.json --fix -p projects/ngx-ramblers/tsconfig.app.json && tslint -c tslint.json --fix -p projects/ngx-ramblers/tsconfig.spec.json",
     "postbuild": "npm install --prefix server",
     "serve": "ng serve --project ngx-ramblers --configuration development --verbose",
     "test": "ng test --project ngx-ramblers --watch=false --browsers=ChromeHeadless",
