--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -24,7 +24,8 @@
   },
   "exclude": [
     "..node_modules",
-    "node_modules"
+    "node_modules",
+    "test-data"
   ],
   "include": [
     "lib/**/*.*",
