feat(migrations): server-side migration system with persistent simulation and route guards (#68)
Resolves: https://github.com/nbarrett/ngx-ramblers/issues/68

Implements a complete server-side database migration system with comprehensive admin UI,
persistent simulation for testing failure scenarios, and route guards to protect users
during maintenance.

Migration Infrastructure:
- Server-side migration execution on startup before serving requests
- Migrations located in server/lib/mongo/migrations/database/
- Automatic migration discovery via timestamp-based filtering (14-digit prefix)
- Support for .ts files in development, .js in production
- Dynamic collection switching for simulation testing (changelog vs changelogSimulation)
- Simulation state persisted in systemConfig.activeChangelogCollection
- Shared path utilities extracted to server/lib/shared/path-utils.ts
- RUN_MIGRATIONS_ON_STARTUP environment variable controls automatic execution (default: false)
- MongoDB connection established before migrations to ensure database readiness

Admin UI (/admin/site-maintenance):
- Comprehensive sortable migration table with Status, File, Timestamp, and Actions columns
- Optimized column widths (12%/48%/25%/13%) for clean layout
- Individual retry buttons for each migration with per-file spinner
- "Clear Failed" button removes all failed migrations from active collection
- Simulation controls with mutually exclusive buttons (Simulate Failure / Clear Simulation)
- Warning alert displayed when simulation mode is active
- Real-time status updates with auto-refresh polling
- Inline error display with full stack traces for failed migrations
- Sticky table headers with color-coded status indicators

Simulation System:
- Persistent simulation across server restarts and browser sessions
- Creates separate changelogSimulation collection with copied entries plus test failures
- Simulated error messages include disclaimer: "Don't worry - this is a simulated error..."
- Idempotent s

--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,17 @@
     "clean": "rimraf target/site/serenity",
     "clean-node": "rm -rf node_modules",
     "clean-ts": "rimraf ts-gen",
-    "copy-assets": "cp -r lib/geojson ts-gen/server/lib/",
+    "copy-assets": "cp -r lib/geojson ts-gen/server/lib/ && cp lib/mongo/migrations/README.md ts-gen/server/lib/mongo/migrations/database/",
     "deploy": "ts-node deploy/deploy-to-environments.ts",
     "lint": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish",
     "lintfix": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish --fix",
     "lintversion": "tslint --version",
     "manage-configs": "ts-node deploy/manage-configs.ts",
+    "migrate": "migrate-mongo up -f migrations/migrate-mongo-config.ts",
+    "migrate:create": "migrate-mongo create -f migrations/migrate-mongo-config.ts",
+    "migrate:down": "migrate-mongo down -f migrations/migrate-mongo-config.ts",
+    "migrate:mark-old-applied": "ts-node lib/mongo/migrations/mark-migrations-applied.ts",
+    "migrate:status": "migrate-mongo status -f migrations/migrate-mongo-config.ts",
     "postinstall": "tsc && npm run copy-assets",
     "postreport": "mkdir -p target/site/archive && tar -czf target/site/archive/serenity-reports.zip -C target/site/serenity .",
     "reinstall": "npm run clean-node && npm install",
@@ -27,8 +32,8 @@
     "server-live": "tsx watch lib/server",
     "test": "failsafe serenity report",
     "tsc": "tsc --project ./tsconfig.json",
-    "tsc-watch": "tsc --project ./tsconfig.json --watch",
     "tsc-check": "tsc --project ./tsconfig.json --noEmit",
+    "tsc-watch": "tsc --project ./tsconfig.json --watch",
     "unit-test": ". test-setenv.sh && npm run build && mocha --watch",
     "unit-test:once": "bash -lc 'source ./test-setenv.sh && npm run build && mocha'"
   },
@@ -96,6 +101,7 @@
     "jsonwebtoken": "8.5.1",
     "luxon": "3.7.2",
     "matchdep": "0.3.0",
+    "migrate-mongo": "12.1.3",
     "mkdirpsync": "0.1.0",
     "mocha": "11.1.0",
     "mongoose": "8.17.1",
