feat(backup): MongoDB backup/restore (S3 paths, UI, selectors, security) (#69) Delivers https://github.com/nbarrett/ngx-ramblers/issues/69 Summary   - Deliver robust MongoDB backup/restore across local and S3 with UI and CLI   - Add global S3 settings and guardrails   - Harden configs API to avoid exposing secrets to non-admins Backend   - S3 bucket strategy       - Prefer global bucket/region from BackupConfig.aws with per‑env fallback       - New S3 path layout: s3://<global-bucket>/<environment>/<database>/<timestamp-env-db>/       - Applies to upload, list, delete, and restore flows   - List, delete, restore improvements       - S3: consistent timestamp extraction/validation, pagination handling       - Local: list + delete parity with consistent shapes and NamedError use   - Dates       - Use date utils (dateTimeNow().toFormat(DateFormat.FILE_TIMESTAMP)) instead of raw Luxon now()   - Security (configs API)       - GET /api/database/configs redacts sensitive fields (apiKey, accessKeyId, secretAccessKey, clientSecret, accessToken, refreshToken, password, username, userName) unless the request is made by an authenticated admin (memberAdmin/contentAdmin/fileAdmin/walkAdmin/socialAdmin/         treasuryAdmin/financeAdmin)       - Admin detection via JWT; non-admins receive redacted config values Frontend   - Environment selector (unified)       - New app-environment-select component supports both modes:           - Multi-select: [(selected)] returns EnvironmentInfo[]               - Select all/none header, chips with native “×” clear               - Humanised labels, dropdown appendTo body, dropdownPosition=bottom           - Single-select: [(selectedName)] returns the env name; humanised label display       - Replaces app-environment-multi-select and app-environment-single-select (removed)   - Collections multi-select       - Consistent chip styling and header badge (compact, rounded), matching environments   - Backups       - Sort by -timestamp, then name (S3 and

--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,10 @@
     "lintfix": "tslint --config ./tslint.json --project ./tsconfig.json --format stylish --fix",
     "lintversion": "tslint --version",
     "manage-configs": "ts-node deploy/manage-configs.ts",
+    "mongo-cli": "tsx deploy/mongo-cli.ts",
+    "mongo-cli:interactive": "tsx deploy/mongo-cli-interactive.ts",
+    "mongo:backup": "tsx deploy/mongo-cli.ts backup",
+    "mongo:restore": "tsx deploy/mongo-cli.ts restore",
     "migrate": "migrate-mongo up -f migrations/migrate-mongo-config.ts",
     "migrate:create": "migrate-mongo create -f migrations/migrate-mongo-config.ts",
     "migrate:down": "migrate-mongo down -f migrations/migrate-mongo-config.ts",
