--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "papaparse": "5.5.3",
     "proj4": "2.11.0",
     "proj4leaflet": "1.0.2",
-    "rxjs": "7.8.1",
+    "rxjs": "^7.8.2",
     "server": "1.0.41",
     "turndown": "7.2.0",
     "url-polyfill": "1.1.12",
