--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/luxon": "3.7.1",
     "@yaireo/tagify": "4.35.4",
     "bootstrap": "5.3.8",
+    "chart.js": "4.5.1",
     "core-js": "3.6.1",
     "es-toolkit": "1.39.10",
     "hammerjs": "2.0.8",
@@ -61,6 +62,7 @@
     "mongoose": "8.17.1",
     "ng-gallery": "11.0.0",
     "ng-recaptcha-2": "16.0.1",
+    "ng2-charts": "8.0.0",
     "ng2-file-upload": "9.0.0",
     "ngx-bootstrap": "20.0.1",
     "ngx-capture": "0.13.0",
@@ -73,7 +75,7 @@
     "papaparse": "5.5.3",
     "proj4": "2.11.0",
     "proj4leaflet": "1.0.2",
-    "rxjs": "^7.8.2",
+    "rxjs": "7.8.2",
     "server": "1.0.41",
     "turndown": "7.2.0",
     "url-polyfill": "1.1.12",
