fix(ci): prevent workflow success on matrix job failures and reduce deployment contention (fixes #91, #90)
- Remove continue-on-error from deploy job so matrix failures fail the workflow
- Add fail-fast: false to allow all deployments to attempt even if one fails
- Add max-parallel: 3 to limit concurrent deployments and reduce API rate limiting
- Increase health check timeout from 5s to 10s to accommodate load spikes

--- a/.github/workflows/deploy-to-environments.yml
+++ b/.github/workflows/deploy-to-environments.yml
@@ -52,10 +52,11 @@ jobs:
     needs: set-environments
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
+      max-parallel: 3
       matrix:
         environment: ${{ fromJson(needs.set-environments.outputs.matrix) }}
     name: Deploy to ${{ matrix.environment }}
-    continue-on-error: true
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
