--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "@fortawesome/free-solid-svg-icons": "6.1.0",
     "@ng-select/ng-select": "20.1.3",
     "@popperjs/core": "2.11.8",
+    "@primeuix/styled": "0.7.4",
+    "@primeuix/styles": "1.2.5",
+    "@primeuix/utils": "0.6.2",
     "@types/luxon": "3.7.1",
     "@yaireo/tagify": "4.35.4",
     "bootstrap": "5.3.8",
@@ -73,6 +76,8 @@
     "ngx-tagify": "15.0.5",
     "ngx-ui-switch": "15.0.0",
     "papaparse": "5.5.3",
+    "primeicons": "7.0.0",
+    "primeng": "20.3.0",
     "proj4": "2.11.0",
     "proj4leaflet": "1.0.2",
     "rxjs": "7.8.2",
