fix(map): improve loading UX, control toggles, and boolean handling   - adds a proper overlay/spinner cycle so heavy GPX maps don’t flash white while layers render   - centralises boolean coercion in UiActionsService (with tests) and reuses it in index map + other consumers   - keeps clustering + waypoint controls inline and respects visitor-lock states   - brings ngx-bootstrap back to the safe version to clear the security warning   - keep map preview and overlay sliders in sync so zoom/height/lat/lng edits persist and dragging the map feeds values back   - refresh markers/center automatically when the location row changes and remember the “hide map options” preference for index rows   - migrate linting to Angular ESLint with TypeScript configs/proxies to keep future changes gated

--- a/angular.json
+++ b/angular.json
@@ -86,7 +86,11 @@
                   "with": "projects/ngx-ramblers/src/environments/environment.production.ts"
                 }
               ],
-              "optimization": {"styles": {"inlineCritical": false }},
+              "optimization": {
+                "styles": {
+                  "inlineCritical": false
+                }
+              },
               "outputHashing": "all"
             },
             "development": {
@@ -137,6 +141,16 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/ngx-ramblers/**/*.ts",
+              "projects/ngx-ramblers/**/*.html"
+            ],
+            "eslintConfig": ".eslint-config/projects/ngx-ramblers/eslint.config.js"
+          }
         }
       }
     }
@@ -147,6 +161,9 @@
     }
   },
   "cli": {
-    "analytics": "2bb37b0d-21c6-47ef-b513-a7c5a141a02c"
+    "analytics": "2bb37b0d-21c6-47ef-b513-a7c5a141a02c",
+    "schematicCollections": [
+      "angular-eslint"
+    ]
   }
 }
