--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build": "ng build --project ngx-ramblers --progress --configuration production",
     "clean": "rm -rf node_modules && rm -rf server/node_modules",
     "reinstall": "npm run clean && npm install && npm run postbuild",
+    "postinstall": "npm run build:eslint-config --silent",
     "e2e": "ng e2e",
-    "lint": "tslint -c tslint.json -p projects/ngx-ramblers/tsconfig.app.json && tslint -c tslint.json -p projects/ngx-ramblers/tsconfig.spec.json",
-    "lintfix": "tslint -c tslint.json --fix -p projects/ngx-ramblers/tsconfig.app.json && tslint -c tslint.json --fix -p projects/ngx-ramblers/tsconfig.spec.json",
+    "build:eslint-config": "ts-node --project tsconfig.tools.json ./tools/build-eslint-config.ts",
+    "lint": "npm run build:eslint-config --silent && eslint --config .eslint-config/eslint.config.js \"projects/ngx-ramblers/**/*.{ts,html}\"",
+    "lintfix": "npm run build:eslint-config --silent && eslint --config .eslint-config/eslint.config.js \"projects/ngx-ramblers/**/*.{ts,html}\" --fix",
     "postbuild": "npm install --prefix server",
     "serve": "ng serve --project ngx-ramblers --configuration development --verbose",
     "test": "ng test --project ngx-ramblers --watch=false --browsers=ChromeHeadless",
@@ -67,7 +69,7 @@
     "ng-recaptcha-2": "16.0.1",
     "ng2-charts": "8.0.0",
     "ng2-file-upload": "9.0.0",
-    "ngx-bootstrap": "20.0.1",
+    "ngx-bootstrap": "20.0.0",
     "ngx-capture": "0.13.0",
     "ngx-google-analytics": "14.0.1",
     "ngx-image-cropper": "6.2.2",
@@ -98,10 +100,12 @@
     "@types/marked": "4.3.2",
     "@types/turndown": "5.0.5",
     "@types/ws": "8.5.4",
-    "codelyzer": "6.0.1",
+    "angular-eslint": "21.0.1",
+    "eslint": "9.39.1",
     "file-loader": "6.2.0",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
+    "jiti": "1.21.7",
     "karma": "6.4.4",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "2.1.1",
@@ -109,8 +113,8 @@
     "karma-jasmine-html-reporter": "1.5.1",
     "source-map-explorer": "2.4.2",
     "ts-node": "10.9.2",
-    "tslint": "6.1.3",
     "typescript": "5.9.2",
+    "typescript-eslint": "8.46.4",
     "webpack-bundle-analyzer": "3.6.0",
     "winston": "3.17.0"
   },
