--- a/server/package.json
+++ b/server/package.json
@@ -74,6 +74,8 @@
     "@types/node": "20.8.1",
     "@types/passport": "1.0.16",
     "@types/passport-jwt": "4.0.1",
+    "@types/adm-zip": "0.5.5",
+    "@types/shapefile": "0.6.3",
     "@types/sinon": "4.3.3",
     "@types/sinon-chai": "3.2.2",
     "@wdio/cli": "9.12.0",
@@ -81,6 +83,7 @@
     "@wdio/local-runner": "9.12.0",
     "@wdio/reporter": "9.11.0",
     "@wdio/spec-reporter": "9.11.0",
+    "@xmldom/xmldom": "0.8.10",
     "axios": "0.19.0",
     "bcryptjs": "2.4.3",
     "body-parser": "1.17.1",
@@ -116,15 +119,19 @@
     "open": "6.0.0",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
+    "proj4": "2.11.0",
+    "shapefile": "0.6.6",
     "puppeteer": "24.4.0",
     "rand-token": "0.4.0",
     "request": "2.88.2",
     "rimraf": "3.0.2",
     "serve-favicon": "2.5.0",
     "serve-index": "1.9.1",
+    "adm-zip": "0.5.16",
     "sharp": "0.33.5",
     "sinon": "8.1.1",
     "source-map-support": "0.5.19",
+    "togpx": "0.5.4",
     "ts-node": "10.9.2",
     "tslint": "6.1.3",
     "tsx": "4.7.0",
