--- a/server/package.json
+++ b/server/package.json
@@ -62,6 +62,7 @@
     "@serenity-js/webdriverio": "3.31.12",
     "@turf/turf": "7.2.0",
     "@turf/union": "7.2.0",
+    "@types/adm-zip": "0.5.5",
     "@types/bcryptjs": "2.4.6",
     "@types/debug": "4.1.12",
     "@types/expect": "24.3.2",
@@ -76,7 +77,6 @@
     "@types/node": "20.8.1",
     "@types/passport": "1.0.16",
     "@types/passport-jwt": "4.0.1",
-    "@types/adm-zip": "0.5.5",
     "@types/shapefile": "0.6.3",
     "@types/sinon": "4.3.3",
     "@types/sinon-chai": "3.2.2",
@@ -86,6 +86,7 @@
     "@wdio/reporter": "9.11.0",
     "@wdio/spec-reporter": "9.11.0",
     "@xmldom/xmldom": "0.8.10",
+    "adm-zip": "0.5.16",
     "axios": "0.19.0",
     "bcryptjs": "2.4.3",
     "body-parser": "1.17.1",
@@ -117,19 +118,19 @@
     "mongoose-unique-validator": "5.0.1",
     "morgan": "1.9.1",
     "multer": "1.3.0",
+    "node-cron": "^4.2.1",
     "npm-failsafe": "1.3.0",
     "open": "6.0.0",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
     "proj4": "2.11.0",
-    "shapefile": "0.6.6",
     "puppeteer": "24.4.0",
     "rand-token": "0.4.0",
     "request": "2.88.2",
     "rimraf": "3.0.2",
     "serve-favicon": "2.5.0",
     "serve-index": "1.9.1",
-    "adm-zip": "0.5.16",
+    "shapefile": "0.6.6",
     "sharp": "0.33.5",
     "sinon": "8.1.1",
     "source-map-support": "0.5.19",
@@ -146,5 +147,8 @@
   "engines": {
     "node": "v22.19.0",
     "npm": "10.9.3"
+  },
+  "devDependencies": {
+    "@types/node-cron": "^3.0.11"
   }
 }
