--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongo-cli:interactive": "tsx deploy/mongo-cli-interactive.ts",
     "mongo:backup": "tsx deploy/mongo-cli.ts backup",
     "mongo:restore": "tsx deploy/mongo-cli.ts restore",
+    "release-notes": "tsx lib/release-notes/generate-release-notes.ts",
     "migrate": "migrate-mongo up -f migrations/migrate-mongo-config.ts",
     "migrate:create": "migrate-mongo create -f migrations/migrate-mongo-config.ts",
     "migrate:down": "migrate-mongo down -f migrations/migrate-mongo-config.ts",
