feat(release-notes): prevent overwriting existing release notes and fix build URLs (ref: #115)
- Only update release notes from the same day to preserve manual edits and images
- Fix incorrect GitHub Actions URL generation (was using build number as run ID)
- Filter out old release notes before processing to prevent overwrites
- Add date-based filtering in both dry-run and normal modes

Additional improvements:
- Add ESLint rules to enforce es-toolkit usage (Object.keys, typeof checks, Array.isArray)
- Add ESLint rules to ban new Date() (use dateTimeNow() from dates library)
- Add ESLint rules to ban inline comments and imperative loops
- Add git hooks to prevent AI attribution in commits (auto-installed via npm)
- Update AGENTS.md with comprehensive ESLint enforcement documentation
- Simplify CLAUDE.md to redirect to AGENTS.md only

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "ng build --project ngx-ramblers --progress --configuration production",
     "clean": "rm -rf node_modules && rm -rf server/node_modules",
     "reinstall": "npm run clean && npm install && npm run postbuild",
-    "postinstall": "npm run build:eslint-config --silent",
+    "postinstall": "npm run build:eslint-config --silent && npm run setup:hooks --silent",
+    "setup:hooks": "bash tools/setup-git-hooks.sh",
     "e2e": "ng e2e",
     "build:eslint-config": "ts-node --project tsconfig.tools.json ./tools/build-eslint-config.ts",
     "lint": "npm run build:eslint-config --silent && eslint --config .eslint-config/eslint.config.js \"projects/ngx-ramblers/**/*.{ts,html}\"",
