feat(brevo): add transactional template management and migration (ref: #121)
Improved email template system for better cross-platform compatibility:

- New template management system for Brevo SMTP templates that can create
  and update templates programmatically
- Database migration to deploy the new fully-automated-text-body template
  which fixes banner sizing issues across email clients (Outlook, webmail)
- Fixed template path resolution to work correctly in both local development
  and production (Fly.io) environments
- Fixed ESLint configuration crash when linting Angular HTML templates

--- a/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
+++ b/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
@@ -115,7 +115,7 @@ jobs:
           CMS_PASSWORD: ${{ secrets.CMS_PASSWORD }}
         run: |
           cd server
-          npm run release-notes -- --latest --build-number ${{ github.run_number }}
+          npm run release-notes -- --latest --build-number ${{ github.run_number }} --include-unassigned
 
       - name: Cleanup sensitive files
         if: always()
