feat(backup): global AWS credentials, S3 path improvements, and DRY refactoring (ref: #146)
## User Guide

### Global Backup Configuration
You can now configure global AWS credentials in the Settings tab under 'Global AWS S3 Configuration'.
This allows a single set of credentials to manage backups across all environments, with per-environment
settings used as fallback.

**New Settings Fields:**
- Access Key ID - AWS access key with S3 permissions
- Secret Access Key - Corresponding secret key

### Backup Improvements
- Backups are now organised by environment and timestamp in S3: `<environment>/<timestamp>/`
- Upload progress is displayed in the History tab logs
- Server-side logging reduced to show only meaningful operations

### Environment Configuration
- MongoDB URI can now be pasted directly - fields auto-populate from the connection string
- All environment configs support AWS, MongoDB, and Fly.io credentials in one place

## Technical Changes

### S3 Path Construction
- New `backup-paths.ts` with pure utility functions for S3 key construction
- 22 unit tests covering path building and parsing
- Simplified path structure: `<env>/<timestamp>` instead of `<env>/<db>/<timestamp>`

### DRY Refactoring
- Consolidated `uploadDirectoryToS3` from 3 duplicate implementations into `server/lib/aws/s3-utils.ts`
- Added factory functions: `createEmptyAwsConfig()`, `createEmptyMongoConfig()`
- `EnvironmentBackupConfig` and `BackupConfig` now type aliases for `EnvironmentConfig` and `EnvironmentsConfig`
- Eliminated inline interface definitions in favour of model imports

### Credential Resolution
- `preferredCredentials()` method prioritises global AWS credentials over per-environment
- `preferredBucket()` and `preferredRegion()` follow same pattern
- `bucketExists()` check prevents AccessDenied errors when credentials lack CreateBucket permission

### Code Quality
- Removed verbose debug logging from backup controller and websocket server
- Method naming follows project co

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ Thumbs.db
 /data/mongo-scripts/
 /server/chrome/
 /server/chromedriver/
+/server/.env
 /test-data/
 /.gemini-clipboard/
 .eslint-config/
