--- a/server/package.json
+++ b/server/package.json
@@ -98,6 +98,7 @@
     "connect-livereload": "0.3.0",
     "csv-parse": "5.3.5",
     "debug": "4.2.0",
+    "dotenv": "17.2.3",
     "errorhandler": "1.5.1",
     "es-toolkit": "1.39.10",
     "esbuild": "0.19.12",
