--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "ng build --project ngx-ramblers --progress --configuration production",
     "clean": "rm -rf node_modules && rm -rf server/node_modules",
     "reinstall": "npm run clean && npm install && npm run postbuild",
-    "postinstall": "npm run build:eslint-config --silent && npm run setup:hooks --silent",
+    "postinstall": "npm run build:eslint-config --silent",
     "setup:hooks": "bash tools/setup-git-hooks.sh",
     "e2e": "ng e2e",
     "build:eslint-config": "ts-node --project tsconfig.tools.json ./tools/build-eslint-config.ts",
