--- a/server/package.json
+++ b/server/package.json
@@ -70,6 +70,7 @@
     "@types/expect": "24.3.2",
     "@types/express-serve-static-core": "4.17.39",
     "@types/inquirer": "9.0.8",
+    "@types/jsdom": "^27.0.0",
     "@types/jsonwebtoken": "9.0.6",
     "@types/luxon": "3.7.1",
     "@types/mailchimp__mailchimp_marketing": "3.0.9",
@@ -110,6 +111,7 @@
     "he": "1.2.0",
     "inquirer": "12.8.2",
     "js-yaml": "3.13.1",
+    "jsdom": "^28.0.0",
     "json2csv": "3.11.5",
     "jsonwebtoken": "8.5.1",
     "luxon": "3.7.2",
