--- a/server/package.json
+++ b/server/package.json
@@ -52,7 +52,7 @@
     ]
   },
   "dependencies": {
-    "@aws-sdk/client-iam": "^3.978.0",
+    "@aws-sdk/client-iam": "3.978.0",
     "@aws-sdk/client-s3": "3.180.0",
     "@getbrevo/brevo": "2.0.0-beta.4",
     "@mailchimp/mailchimp_marketing": "3.0.80",
@@ -70,7 +70,7 @@
     "@types/expect": "24.3.2",
     "@types/express-serve-static-core": "4.17.39",
     "@types/inquirer": "9.0.8",
-    "@types/jsdom": "^27.0.0",
+    "@types/jsdom": "27.0.0",
     "@types/jsonwebtoken": "9.0.6",
     "@types/luxon": "3.7.1",
     "@types/mailchimp__mailchimp_marketing": "3.0.9",
@@ -111,7 +111,7 @@
     "he": "1.2.0",
     "inquirer": "12.8.2",
     "js-yaml": "3.13.1",
-    "jsdom": "^28.0.0",
+    "jsdom": "28.0.0",
     "json2csv": "3.11.5",
     "jsonwebtoken": "8.5.1",
     "luxon": "3.7.2",
@@ -123,7 +123,7 @@
     "mongoose-unique-validator": "5.0.1",
     "morgan": "1.9.1",
     "multer": "1.3.0",
-    "node-cron": "^4.2.1",
+    "node-cron": "4.2.1",
     "npm-failsafe": "1.3.0",
     "open": "6.0.0",
     "passport": "0.4.0",
@@ -154,6 +154,6 @@
     "npm": "10.9.3"
   },
   "devDependencies": {
-    "@types/node-cron": "^3.0.11"
+    "@types/node-cron": "3.0.11"
   }
 }
