--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@angular/platform-browser-dynamic": "20.3.15",
     "@angular/router": "20.3.15",
     "@bluehalo/ngx-leaflet": "20.0.0",
+    "@iconify-json/devicon": "1.2.58",
+    "@iconify-json/logos": "1.2.10",
     "@fortawesome/angular-fontawesome": "0.10.2",
     "@fortawesome/fontawesome-free": "6.7.2",
     "@fortawesome/fontawesome-svg-core": "6.7.2",
@@ -69,6 +71,7 @@
     "luxon": "3.7.2",
     "marked": "16.2.1",
     "meetup-api": "1.4.39",
+    "mermaid": "11.12.2",
     "method-override": "3.0.0",
     "mongoose": "8.17.1",
     "ng-gallery": "11.0.0",
