--- a/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
+++ b/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
@@ -105,6 +105,7 @@ jobs:
       - name: Deploy image ngx-ramblers:${{ github.run_number }} to fly.io
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          ADMIN_MONGODB_URI: ${{ secrets.ADMIN_MONGODB_URI }}
         run: |
           ts-node server/deploy/deploy-to-environments.ts --environment "${{ secrets.APP_NAME }}" --image-tag "${{ github.run_number }}"
 
