build: add claude-swarm lifecycle management and timed git hooks
- Add @annix/claude-swarm 0.1.12 as devDependency
- Add dev/stop npm scripts backed by claude-swarm
- Add claude-swarm.sh launcher (npm-based, no pnpm)
- Add .claude-swarm/config.json: frontend (port 4200) and server (port 5001)
  with logs directed to cli-output/logs
- Add run-frontend.sh: wraps npm run serve
- Add run-server.sh: loads secrets from non-vcs/secrets/secrets.${NGX_APP}.env
  safely (handles & in URLs), sets runtime env vars, starts tsx watch server
- Replace pre-push hook with timed version using @annix/claude-swarm/timer.sh:
  lint -> frontend tests -> server tests with ms-precision timing summary

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "ngx-cli": "./bin/ngx-cli"
   },
   "scripts": {
+    "dev": "claude-swarm start",
+    "stop": "claude-swarm stop",
     "analyze": "webpack-bundle-analyzer dist/ngx-ramblers/stats-es2015.json",
     "build:stats": "ng build --project ngx-ramblers --configuration production --statsJson=true",
     "build": "ng build --project ngx-ramblers --progress --configuration production",
@@ -42,12 +44,12 @@
     "@angular/platform-browser-dynamic": "20.3.15",
     "@angular/router": "20.3.15",
     "@bluehalo/ngx-leaflet": "20.0.0",
-    "@iconify-json/logos": "1.2.10",
     "@fortawesome/angular-fontawesome": "0.10.2",
     "@fortawesome/fontawesome-free": "6.7.2",
     "@fortawesome/fontawesome-svg-core": "6.7.2",
     "@fortawesome/free-brands-svg-icons": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "6.7.2",
+    "@iconify-json/logos": "1.2.10",
     "@ng-select/ng-select": "20.1.3",
     "@popperjs/core": "2.11.8",
     "@primeuix/styled": "0.7.4",
@@ -102,6 +104,7 @@
     "@angular/cli": "20.3.13",
     "@angular/compiler-cli": "20.3.15",
     "@angular/language-service": "20.3.15",
+    "@annix/claude-swarm": "0.1.12",
     "@types/jasmine": "5.1.13",
     "@types/jasminewd2": "2.0.13",
     "@types/leaflet": "1.9.21",
