--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# claude-swarm runtime files
+/.claude-swarm/registry.json
+/pnpm-lock.yaml
+
 # compiled output
 /dist
 /tmp
