feat: enforce lint consistently across frontend and server, fix all violations (closes #116)
- Add lint:frontend, lint:server, and lint:all scripts to package.json
- Update .githooks/pre-push to run lint:all (frontend + server) before push
- Add lint step to GitHub Actions CI workflow before unit tests
- Add server/ts-gen/** and CLI implementation files to ESLint ignores
- Fix all 213 server-side violations across 75 files:
  - Object.keys/values → keys/values from es-toolkit/compat
  - Array.isArray → isArray from es-toolkit/compat
  - typeof checks → isString/isObject/isNumber from es-toolkit/compat
  - console.log → cliLogger.log in CLI scripts
  - new Date() → dateTimeNow() from server/lib/shared/dates
  - Inline comments removed, logic expressed through named constructs
  - All for/while/do-while loops replaced with recursive or declarative equivalents

--- a/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
+++ b/.github/workflows/build-push-and-deploy-ngx-ramblers-docker-image.yml
@@ -27,6 +27,9 @@ jobs:
         run: npm ci
         working-directory: ./server
 
+      - name: Run lint checks (frontend + server)
+        run: npm run lint:all
+
       - name: Setup Chrome for headless tests
         uses: browser-actions/setup-chrome@v1
 
