--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "e2e": "ng e2e",
     "build:eslint-config": "ts-node --project tsconfig.tools.json ./tools/build-eslint-config.ts",
     "lint": "npm run build:eslint-config --silent && eslint --config .eslint-config/eslint.config.js \"projects/ngx-ramblers/**/*.{ts,html}\"",
+    "lint:frontend": "npm run lint",
+    "lint:server": "npm run build:eslint-config --silent && eslint --config .eslint-config/eslint.config.js \"server/**/*.ts\"",
+    "lint:all": "npm run build:eslint-config --silent && eslint --config .eslint-config/eslint.config.js \"projects/ngx-ramblers/**/*.{ts,html}\" \"server/**/*.ts\"",
     "lintfix": "npm run build:eslint-config --silent && eslint --config .eslint-config/eslint.config.js \"projects/ngx-ramblers/**/*.{ts,html}\" --fix",
     "postbuild": "npm install --prefix server",
     "serve": "ng serve --project ngx-ramblers --configuration development --verbose",
